src/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
@import "tailwindcss";
@config "../../tailwind.config.ts";

:root {
  font-family: "Sour Gummy", sans-serif;
  font-weight: 500;
  line-height: 1.5;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #99dfff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  user-select: none;
}

body {
  width: 100%;
  overscroll-behavior-x: none;
  margin: 0;
  padding: 0;
}

body:has(.prevent-scrolling) {
  overflow: hidden;
}

#root {
  width: 100%;
  min-height: 100vh;
  display: flex;
  place-items: center;

  overflow: hidden;
  overscroll-behavior-x: none;
}

html,
body,
#root {
  height: 100%;
}

